<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:background="#B019F1"
    android:orientation="vertical"
    tools:context="Batman">

    <TextView
        android:id="@+id/txtnome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:hint="@string/nome" />

    <TextView
        android:id="@+id/txtnome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtcodinome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/codinome" />

    <TextView
        android:id="@+id/txtcodinome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtespecie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/especie" />

    <TextView
        android:id="@+id/txtespecie2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txthabilidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/habilidade" />

    <TextView
        android:id="@+id/txthabilidade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtvulnerabilidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/vulnerabilidade" />

    <TextView
        android:id="@+id/txtvulnerabilidade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtacesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/acesso" />

    <TextView
        android:id="@+id/txtacesso2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtequip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#FF5722"
        android:hint="@string/equipamento" />

    <TextView
        android:id="@+id/txtequip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtequpdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/descequip" />

    <TextView
        android:id="@+id/txtequipdesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtequipfin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FF5722"
        android:hint="@string/finalidadeequip" />

    <TextView
        android:id="@+id/txtequipfin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>